--- a/desenvolvedores.html
+++ b/desenvolvedores.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desenvolvedores</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="cont.css">
+    <link rel="stylesheet" href="intro.css">
     <link rel="shortcut icon" href="imagens/icon.pex.ico" type="image/x-icon">
 </head>
 
